[package]
name = "net-compute"
description = "(Under development) A simple distributed computing environment."
version = "0.0.3"
edition = "2021"
authors = ["Palash Kanti Kundu"]
readme = "README.md"
repository = "https://github.com/Palash90/net-compute"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
